# iic-api-example

./: .env.example  .gitignore  Makefile  README.md  build_standalone.py  docker-compose.yml  package.json
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  postCreateCommand.sh
.github/workflows/: build-tauri.yml
central/iam/: project.rest  user.rest
central/mmc/: region.rest
nginx/: default.conf
openspec/changes/archive/2026-06-30-server-specific-token-project-settings/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-30-server-specific-token-project-settings/specs/server-scoped-doc-credentials/: spec.md
openspec/changes/server-credential-settings-modal/: design.md  proposal.md  tasks.md
openspec/changes/server-credential-settings-modal/specs/server-scoped-doc-credentials/: spec.md
openspec/specs/server-scoped-doc-credentials/: spec.md
regions/vps/: flavor.rest  floatingip.rest  keypair.rest  securitygroup.rest  server.rest
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
swagger/: iam.yaml  index.html  mcc.yaml  vps.yaml  vrm.yaml
web/: app.js  index.html  specs.json  styles.css
