[package]
name = "iic-api-docs"
version = "0.1.0"
description = "IIC API Docs Desktop"
authors = ["IIC"]
license = "MIT"
default-run = "iic-api-docs"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
